# sudoku_solver

./: .gitignore  LICENSE  README.md  data.py  model.py  pyproject.toml  solve.py  train.py  visualize.py
.github/workflows/: ci.yml
tests/: test_solve_cli.py  test_solve_validation.py
